CevelopProject/tests/com.cevelop.includator.tests/resources/com.cevelop.includator.tests/syntaxerrortests/SyntaxError1MissingOpeningBracket.rts
//!SyntaxError1MissingOpeningBracket
//@A.cpp
#include "B.h"
#include "C.h"

int main()
  B b;
  return 0;
}
//@B.h
class B { };
//@C.h
class C { };
